--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongodb": "^3.2.1",
     "mongoose": "^5.4.19",
+    "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
