--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.4.19",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "sharp": "^0.22.0",
     "socket.io": "^2.2.0",
     "validator": "^10.11.0"
   },
