--- a/oversightclient/package.json
+++ b/oversightclient/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "mdbreact": "^4.9.0",
+    "@mdi/js": "^3.5.95",
+    "@mdi/react": "^1.1.0",
+    "materialize-css": "^1.0.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-materialize": "^3.0.4",
+    "react-parallax": "^2.2.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "socket.io-client": "^2.2.0"
