--- a/oversightclient/package.json
+++ b/oversightclient/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mdi/js": "^3.5.95",
     "@mdi/react": "^1.1.0",
+    "axios": "^0.18.0",
     "materialize-css": "^1.0.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
