--- a/oversightclient/package.json
+++ b/oversightclient/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-scroll-to-component": "^1.0.2",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "sweetalert2": "^8.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
