--- a/oversightclient/package.json
+++ b/oversightclient/package.json
@@ -12,6 +12,7 @@
     "react-ga": "^2.5.7",
     "react-materialize": "^3.0.4",
     "react-parallax": "^2.2.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-scroll-to-component": "^1.0.2",
