--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "client": "npm start --prefix oversightclient",
-    "server": "nodemon server.js",
+    "server": "nodemon server.js"
   },
   "author": "Jehiel Martinez",
   "license": "ISC",
