--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "client": "npm start --prefix oversightclient",
+    "client": "npm start --prefix client",
     "server": "nodemon server.js"
   },
   "author": "Jehiel Martinez",
